Improvements to String and boolean handling
git-svn-id: https://svn.apache.org/repos/asf/webservices/commons/trunk/modules/XmlSchema@446914 13f79535-47bb-0310-9956-ffa450edef68